# dicedb-compass

./: README.md  eslint.config.mjs  package.json  remove.tsx  tsconfig.json
.github/workflows/: cd.yml
app/: app.css  root.tsx
app/.server/: session.ts
app/components/: app-sidebar.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  team-switcher.tsx
app/components/atoms/: add-new-connection-button.tsx  loader.tsx  logo.tsx  raw-loader.tsx  typography.tsx
app/components/icons/: cloud-database.tsx
app/components/molecules/: checkbox-with-description.tsx  connection-dialog.tsx  connection-form.tsx  search-bar.tsx
app/components/ui/: alert-dialog.tsx  avatar.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  collapsible.tsx  dialog.tsx  input.tsx  (+10 more)
app/lib/: stronghold.ts
app/routes/: index.tsx
app/welcome/: welcome.tsx
src-tauri/: .gitignore  Cargo.toml  data.redb  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dice/: Cargo.toml
src-tauri/dicedb/: Cargo.toml  build.rs
src-tauri/dicedb/protos/: cmd.proto  res.proto
src-tauri/dicedb/src/: client.rs  constant.rs  lib.rs
src-tauri/dicedb/src/wire/: cmd.rs  mod.rs  res.rs
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs
src-tauri/src/command/: connection.rs  mod.rs  query.rs  temp.rs
src-tauri/src/database/: config_db.rs  connection_db.rs  db.rs  mod.rs  query.rs
src-tauri/src/package/: connection_manager.rs  crypto.rs  error.rs  mod.rs  model.rs  string_ext.rs
src-tauri/src/queries/: connection.rs
src-tauri/src/store/: stronghold.rs
src-tauri/src/util/: constant.rs  mod.rs  password.rs
src-tauri/src/utils/: constants.rs  password.rs
(+25 files in other folders)
