[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2.2.6"
redb = "2.2.0"
thiserror = "2.0.12"
tauri-plugin-stronghold = "2"
tokio = { version = "1.45.0", features = ["full"] }
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "tokio",
    "crypto-rust",
] }
rand = "0.9.1"
rand_chacha = "0.9.0"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
dicedb = "0.1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
