[package]
name = "dicedb"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.27"
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v7"] }

[build-dependencies]
prost-build = "0.13.5"
